testsuite/tests/grammar/invalid_list/invalid-astlist.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <-
      ASTList[FooNode, Example, Example]+(Example("example"))
}
